--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,8 @@ env:
 jobs:
   check-prerequisites:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
     steps:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -157,6 +159,8 @@ jobs:
   bootstrap-infra:
     runs-on: ubuntu-latest
     needs: [check-prerequisites, generateMatrix]
+    permissions:
+      id-token: write
     strategy:
       matrix: ${{ fromJson(needs.generateMatrix.outputs.matrix) }}
     steps:
@@ -208,6 +212,8 @@ jobs:
   upload:
     needs: [build, generateMatrix, bootstrap-infra]
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
     strategy:
       matrix: ${{ fromJson(needs.generateMatrix.outputs.matrix) }}
     steps:
@@ -246,6 +252,8 @@ jobs:
   deploy:
     needs: [build, upload]
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
     steps:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
