--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -91,7 +91,7 @@ jobs:
 
   build:
     needs: [check-prerequisites]
-    runs-on: ubuntu-latest-arm64
+    runs-on: ubuntu-latest
     outputs:
       api-bootstrap-md5sum: ${{ steps.calculate-md5.outputs.md5sum }}
     steps:
@@ -111,20 +111,18 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y protobuf-compiler
 
-      - name: Setup Rust toolchain
-        uses: dtolnay/rust-toolchain@stable
+      - name: Install Rust toolchain with Cargo Lambda
+        uses: moonrepo/setup-rust@v1
+        with:
+          bins: cargo-lambda
+          targets: aarch64-unknown-linux-gnu
 
       - name: Cache Rust dependencies
         if: env.ACT != 'true'
         uses: Swatinem/rust-cache@v2
 
-      - name: Install Cargo Lambda
-        uses: jaxxstorm/action-install-gh-release@v1
-        with:
-          repo: cargo-lambda/cargo-lambda
-
-      - name: Install Zig
-        uses: goto-bus-stop/setup-zig@v2
+      - name: Install Zig toolchain
+        uses: mlugg/setup-zig@v2
 
       - name: Build with Cargo Lambda
         run: |-
