--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -99,12 +99,9 @@ jobs:
         if: env.ACT != 'true'
         uses: actions/checkout@v4
 
-      - name: Configure Git for private repositories
-        if: env.ACT == 'true'
+      - name: Configure Git for access to Archodex/surrealdb private repository
         run: |
-          git config --global url."https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/".insteadOf "https://github.com/"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          git config --global url."https://x-access-token:${{ secrets.ARCHODEX_PRIVATE_SURREALDB_GITHUB_TOKEN }}@github.com/".insteadOf "https://github.com/"
 
       - name: Install development packages
         run: |-
