--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -134,6 +134,14 @@ jobs:
           echo "🔍 API_BOOTSTRAP_MD5SUM calculated: $MD5SUM"
           echo "md5sum=$MD5SUM" >> $GITHUB_OUTPUT
 
+      - name: Upload build artifacts
+        if: env.ACT != 'true'
+        uses: actions/upload-artifact@v4
+        with:
+          name: lambda-bootstrap
+          path: target/lambda/lambda/bootstrap.zip
+          retention-days: 3
+
   generateMatrix:
     runs-on: ubuntu-latest
     outputs:
@@ -214,6 +222,13 @@ jobs:
     strategy:
       matrix: ${{ fromJson(needs.generateMatrix.outputs.matrix) }}
     steps:
+      - name: Download build artifacts
+        if: env.ACT != 'true'
+        uses: actions/download-artifact@v4
+        with:
+          name: lambda-bootstrap
+          path: target/lambda/lambda/
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
