--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -9,6 +9,7 @@ on:
 env:
   ACT: false
   AWS_PAGER: ""
+  OCI_REPO: ""
 
 jobs:
   build:
@@ -101,13 +102,17 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Calculate OCI image repo
+        id: repo
+        run: echo "OCI_REPO=ghcr.io/${GITHUB_REPOSITORY@L}" >> $GITHUB_ENV
+
       - name: Build and push container images
         id: build
         uses: docker/build-push-action@v6
         with:
           context: .
           platforms: linux/${{ matrix.arch }}
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: ${{ env.OCI_REPO }}
           labels: ${{ steps.meta.outputs.labels }}
           outputs: ${{ env.ACT != 'true' && 'type=image,push-by-digest=true,name-canonical=true,push=true' }}
 
