--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -14,6 +14,11 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+      attestations: write
+      id-token: write
     strategy:
       matrix:
         arch: [aarch64, x86_64]
@@ -133,6 +138,11 @@ jobs:
   publish:
     needs: build
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+      attestations: write
+      id-token: write
     steps:
       - name: Download digests
         uses: actions/download-artifact@v4
